--- a/frontend/app/view1/view1.html
+++ b/frontend/app/view1/view1.html
@@ -1,28 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
+<div class="content">
 
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <!--<link rel="icon" href="../../favicon.ico">-->
-
-    <title>YAH</title>
-
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.5/angular.min.js"></script>
-
-
-</head>
-
-<body>
-
-    <div class="container">
+  <div class="container">
         <div class="header clearfix">
             <h3 class="text-muted">Yet Another Hackernews</h3>
         </div>
@@ -45,10 +23,13 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
-                            <th></th>
-                            <td></td>
-                            <td></td>
+                        <tr ng-repeat="machine in machines track by $index">
+                            <th scope="row">{{'{{$index+1}}'}}</th>
+                            <td>{{ '{{machine.device}}' }}</td>
+                            <td>{{ '{{machine.ip}}' }}</td>
+                            <td> {{'{{machine.username}}'}}</td>
+                            <td>{{'{{machine.password}}'}}</td>
+                            <td>{{'{{machine.port}}'}}</td>
                             <td></td>
                             <td></td>
                             <td></td>
@@ -61,6 +42,7 @@
 
     </div>
 
-</body>
+</div>
 
-</html>
+
+
