Update scope variables (DOM) to show changes in top stories

--- a/frontend/app/view1/view1.html
+++ b/frontend/app/view1/view1.html
@@ -14,9 +14,9 @@
                             <th>#</th>
                             <th>Title</th>
                             <th>Author</th>
-                            <th>URL</th>
-                            <th>Translation 1</th>
-                            <th>Translation 2</th>
+                            <!--<th>URL</th>-->
+                            <th>Portuguese Translation</th>
+                            <th>German Translation</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -24,7 +24,7 @@
                             <th scope="row">{{$index+1}}</th>
                             <td><a href="{{post.url}}" target="_blank">{{post.title}}</a></td>
                             <td>{{post.by}}</td>
-                            <td>{{post.url}}</td> 
+                            <!--<td>{{post.url}}</td>-->
                             <td></td>
                             <td></td>
                         </tr>
